log
Fri 23 Sep 2022 06:38:58 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
d730473
Fri 23 Sep 2022 06:46:33 PM UTC: 
 treemap.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c:52:8: error: ‘insertTreeMap’ defined but not used [-Werror=unused-function]
   52 |   void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |        ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
2230df5
Fri 23 Sep 2022 06:47:04 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
treemap.c:68:1: error: expected identifier or ‘(’ before ‘}’ token
   68 | }
      | ^
Compilation failed
60b2655
